--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,7 +59,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -67,22 +69,23 @@
                 android:textColor="@color/colorHitam"
                 android:fontFamily="@font/roboto"
                 android:textSize="20sp"
+                android:layout_margin="10dp"
+
                 android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"/>
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="15dp">
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_peraturan"
                     android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_width="170dp"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="5dp">
                     <FrameLayout
@@ -120,7 +123,7 @@
 
                     android:id="@+id/menu_pelanggaran"
                     android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_width="170dp"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="5dp"
                     android:layout_marginStart="10dp"
@@ -161,15 +164,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp">
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp">
                 <androidx.cardview.widget.CardView
 
                     android:id="@+id/menu_daftar_kelas"
                     android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_width="170dp"
                     app:cardElevation="0dp"
                     android:layout_marginTop="10dp"
                     app:cardCornerRadius="5dp">
@@ -208,7 +211,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_lainya"
                     android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_width="170dp"
                     app:cardElevation="0dp"
                     android:layout_marginTop="10dp"
                     app:cardCornerRadius="5dp"
