fix bukusaku 1.0 and user

--- a/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
+++ b/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="24dp"
 
         android:layout_marginTop="8dp"
-        android:text="NIG"
+        android:text="@string/email"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -96,7 +96,7 @@
     <Button
         android:id="@+id/btn_out"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
@@ -105,6 +105,7 @@
         android:background="@drawable/green_button"
         android:text="@string/keluar"
         android:textAllCaps="false"
+        android:backgroundTint="#23B88E"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
