--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,8 +81,8 @@
                 android:layout_marginTop="15dp">
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_peraturan"
-                    android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_height="80dp"
+                    android:layout_width="151dp"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="5dp">
                     <FrameLayout
@@ -119,12 +119,12 @@
                 <androidx.cardview.widget.CardView
 
                     android:id="@+id/menu_pelanggaran"
-                    android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_height="80dp"
+                    android:layout_width="151dp"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="5dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginLeft="18dp"
                     android:background="@color/colorWhite">
                     <FrameLayout
                         android:background="@drawable/border"
@@ -168,8 +168,8 @@
                 <androidx.cardview.widget.CardView
 
                     android:id="@+id/menu_daftar_kelas"
-                    android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_height="80dp"
+                    android:layout_width="151dp"
                     app:cardElevation="0dp"
                     android:layout_marginTop="10dp"
                     app:cardCornerRadius="5dp">
@@ -207,13 +207,13 @@
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_lainya"
-                    android:layout_height="90dp"
-                    android:layout_width="180dp"
+                    android:layout_height="80dp"
+                    android:layout_width="151dp"
                     app:cardElevation="0dp"
                     android:layout_marginTop="10dp"
                     app:cardCornerRadius="5dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginLeft="18dp"
                     android:background="@color/colorWhite">
                     <FrameLayout
                         android:background="@drawable/border"
@@ -258,7 +258,7 @@
                     android:layout_height="match_parent"
                     android:text="@string/aktivitas_terbaru"
                     android:fontFamily="@font/roboto"
-                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
                     android:textSize="20sp"
                     android:textColor="@color/colorHitam"
                     android:layout_marginLeft="20dp"
