--- a/app/src/main/res/layout-v21/fragment_profile.xml
+++ b/app/src/main/res/layout-v21/fragment_profile.xml
@@ -22,11 +22,11 @@
         android:id="@+id/imgprofile"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
+        tools:src="@drawable/profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/profile">
+        app:layout_constraintTop_toTopOf="parent">
 
     </de.hdodenhof.circleimageview.CircleImageView>
 
@@ -95,7 +95,6 @@
     <Button
         android:id="@+id/btn_out"
         android:layout_width="match_parent"
-
         android:layout_height="65dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
