--- a/app/src/main/res/layout-v16/fragment_dashboard.xml
+++ b/app/src/main/res/layout-v16/fragment_dashboard.xml
@@ -15,7 +15,7 @@
         <TextView
             android:textStyle="bold"
             android:textSize="16sp"
-            android:fontFamily="@font/roboto"
+            app:fontFamily="@font/roboto"
             android:text="@string/overview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -34,17 +34,19 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:textSize="12sp"
-                    android:fontFamily="@font/roboto"
+                    app:fontFamily="@font/roboto"
                     android:text="@string/jumlah_pelanggar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
                 <TextView
+                    android:id="@+id/JumlahPelanggar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:fontFamily="@font/roboto"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:fontFamily="@font/roboto"
                     tools:text="52" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -63,17 +65,19 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:textSize="12sp"
-                    android:fontFamily="@font/roboto"
+                    app:fontFamily="@font/roboto"
                     android:text="@string/jumlah_siswa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
                 <TextView
+                    android:id="@+id/JumlahSiswa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:fontFamily="@font/roboto"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:fontFamily="@font/roboto"
                     tools:text="52" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -81,7 +85,7 @@
             android:layout_marginTop="24dp"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:fontFamily="@font/roboto"
+            app:fontFamily="@font/roboto"
             android:text="@string/pelanggaran_paling_sering"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
