--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -38,13 +38,15 @@
                     android:text="@string/jumlah_pelanggar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
                 <TextView
+                    android:id="@+id/JumlahPelanggar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    app:fontFamily="@font/roboto"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:fontFamily="@font/roboto"
                     tools:text="52" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -67,13 +69,15 @@
                     android:text="@string/jumlah_siswa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
                 <TextView
+                    android:id="@+id/JumlahSiswa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    app:fontFamily="@font/roboto"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:fontFamily="@font/roboto"
                     tools:text="52" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
