--- a/bukusakuonline/src/main/res/layout/activity_tentang_kami.xml
+++ b/bukusakuonline/src/main/res/layout/activity_tentang_kami.xml
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
                     android:textSize="14sp"
-                    android:text="Bukusakuku adalah sebuah aplikasi yang untuk kamu sayang iya kamu sayang :*"
+                    android:text="Bukusakuku adalah sebuah aplikasi yang untuk kamu sayang iya kamu sayang : jangan lupa bahagia"
                     android:fontFamily="@font/roboto"/>
                 <TextView
                     android:layout_width="match_parent"
@@ -104,7 +104,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_marginTop="10dp"
-                        android:src="@drawable/masfiud"/>
+                        android:src="@drawable/gawang"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -133,7 +133,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_marginTop="10dp"
-                        android:src="@drawable/masfiud"/>
+                        android:src="@drawable/faresa"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -151,13 +151,14 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="faresa"/>
+                            android:text="Faresa"/>
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                      android:orientation="horizontal">
+
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
@@ -182,7 +183,44 @@
                             android:layout_height="wrap_content"
                             android:text="Bagas"/>
                     </LinearLayout>
+
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/yudhan" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/roboto"
+                            android:text="Yudhan Jefri"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Yudhan" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -191,6 +229,7 @@
                     android:layout_marginTop="14dp"
                     android:fontFamily="@font/roboto"
                     android:textSize="16sp"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
