--- a/bukusakuonline/src/main/res/layout/item_peraturan.xml
+++ b/bukusakuonline/src/main/res/layout/item_peraturan.xml
@@ -3,16 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_margin="15dp"
+        android:layout_width="320dp"
         app:cardCornerRadius="10sp"
         android:background="@drawable/border"
-
-        android:layout_height="wrap_content">
+        android:layout_marginTop="15dp"
+        android:layout_height="100dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
