--- a/app/src/main/res/layout-large/fragment_home.xml
+++ b/app/src/main/res/layout-large/fragment_home.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 app:layout_collapseMode="parallax"
                 android:background="@color/colorbgHome"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="75dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,17 +37,17 @@
             <SearchView
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="45dp"
                 android:iconifiedByDefault="false"
                 android:queryBackground="@drawable/background_search_home"
                 android:searchIcon="@drawable/sercing"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:queryHint="Cari siswa berdasarkan nis"
+                android:queryHint="Cari Siswa Berdasarkan NIS"
                 android:background="@drawable/background_search_home"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginTop="110dp"/>
+                android:layout_marginTop="100dp"/>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.core.widget.NestedScrollView
