--- a/app/src/main/res/layout/item_detail_pasal.xml
+++ b/app/src/main/res/layout/item_detail_pasal.xml
@@ -38,7 +38,7 @@
                     android:text="1"
                     android:textAlignment="center"
                     android:textColor="@color/colorWhite"
-                    android:textSize="40sp" />
+                    android:textSize="24sp" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -51,7 +51,7 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
                 android:fontFamily="@font/robotoligth"
-                android:text="Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto"
+                android:text="@string/peraturan_item"
                 android:textSize="16sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
