--- a/app/src/main/res/layout/item_peraturan.xml
+++ b/app/src/main/res/layout/item_peraturan.xml
@@ -3,16 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/colorbgPeraturan"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="125dp"
+        android:background="@drawable/border"
         android:layout_margin="15dp"
         app:cardCornerRadius="7dp"
         app:cardElevation="15dp">
         <FrameLayout
             android:layout_width="match_parent"
+            android:background="@drawable/border"
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
