--- a/app/src/main/res/layout/item_peraturan.xml
+++ b/app/src/main/res/layout/item_peraturan.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="125dp"
         android:background="@drawable/border"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
         app:cardCornerRadius="7dp"
         app:cardElevation="0dp">
         <androidx.constraintlayout.widget.ConstraintLayout
