--- a/app/src/main/res/layout/item_peraturan.xml
+++ b/app/src/main/res/layout/item_peraturan.xml
@@ -61,7 +61,7 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="24dp"
                 android:layout_marginRight="24dp"
-                android:src="@drawable/next"
+                android:src="@drawable/ic_next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
