--- a/bukusakuonline/src/main/res/layout/activity_detail_pasal.xml
+++ b/bukusakuonline/src/main/res/layout/activity_detail_pasal.xml
@@ -14,6 +14,5 @@
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
-        tools:listitem="@layout/item_detail_pasal"
-        android:layout_margin="20dp"/>
+        tools:listitem="@layout/item_detail_pasal"/>
 </LinearLayout>
