--- a/bukusakuonline/src/main/res/layout/item_peraturan.xml
+++ b/bukusakuonline/src/main/res/layout/item_peraturan.xml
@@ -4,15 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/colorbgPeraturan"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
-        android:layout_width="320dp"
-        app:cardCornerRadius="10sp"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
         android:background="@drawable/border"
-        android:layout_marginTop="15dp"
-        android:layout_height="100dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="7dp"
+        app:cardElevation="0dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:background="@drawable/border"
             android:layout_height="match_parent">
             <LinearLayout
                 android:id="@+id/linearLayout3"
@@ -56,14 +61,12 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="24dp"
                 android:layout_marginRight="24dp"
-                android:src="@drawable/next"
+                android:src="@drawable/ic_next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
-
 
 </LinearLayout>
