--- a/bukusakuonline/src/main/res/values/styles.xml
+++ b/bukusakuonline/src/main/res/values/styles.xml
@@ -36,4 +36,7 @@
     <style name="SpinnerTheme" parent="android:Widget.Spinner">
         <item name="android:background">@drawable/spinner_background</item>
     </style>
+    <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
