--- a/bukusakuonline/src/main/res/layout-xlarge/fragment_home.xml
+++ b/bukusakuonline/src/main/res/layout-xlarge/fragment_home.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 app:layout_collapseMode="parallax"
                 android:background="@color/colorbgHome"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="75dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
