--- a/bukusakuonline/src/main/res/layout/item_siswa.xml
+++ b/bukusakuonline/src/main/res/layout/item_siswa.xml
@@ -9,10 +9,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="125dp"
-        android:layout_margin="15dp"
+        android:layout_margin="20dp"
         android:background="@drawable/border"
         app:cardCornerRadius="7dp"
-       >
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -47,6 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:textSize="16sp"
+                    android:maxLength="16"
                     android:textStyle="bold"
                     app:fontFamily="@font/roboto"
                     tools:text="Ravendra Al Kutsar" />
@@ -55,7 +56,7 @@
                     android:id="@+id/nisSiswa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="3103118061"
+                    android:text="@string/_3103118061"
                     android:textSize="16sp" />
             </LinearLayout>
 
