--- a/app/src/main/res/layout/fragment_detail_siswa.xml
+++ b/app/src/main/res/layout/fragment_detail_siswa.xml
@@ -19,7 +19,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
-            android:src="@drawable/masfiud"
+            tools:src="@drawable/masfiud"
             android:layout_margin="32dp"/>
         <LinearLayout
             android:id="@+id/linearLayout"
