--- a/bukusakuonline/src/main/res/layout/fragment_detail_siswa.xml
+++ b/bukusakuonline/src/main/res/layout/fragment_detail_siswa.xml
@@ -19,7 +19,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
-            android:src="@drawable/masfiud"
+            tools:src="@drawable/masfiud"
             android:layout_margin="32dp"/>
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="6dp"
-                android:text="@string/rayhan_rafiud_darojat"
+                tools:text="@string/rayhan_rafiud_darojat"
                 android:textSize="16sp"
                 android:textColor="#29291E"
                 app:fontFamily="@font/roboto" />
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="6dp"
-            android:text="@string/x_rpl_1"
+            tools:text="@string/x_rpl_1"
             android:textSize="16sp"
             android:textColor="#29291E"
             app:fontFamily="@font/roboto" />
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="6dp"
-            android:text="@string/_100"
+            tools:text="@string/_100"
             android:textColor="#29291E"
             android:textSize="16sp"
             app:fontFamily="@font/roboto" />
@@ -139,7 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="6dp"
-        android:text="@string/_100"
+        tools:text="@string/_100"
         android:textColor="#29291E"
         android:textSize="16sp"
         app:fontFamily="@font/roboto" />
