--- a/bukusakuonline/src/main/res/layout-xlarge/fragment_home.xml
+++ b/bukusakuonline/src/main/res/layout-xlarge/fragment_home.xml
@@ -34,7 +34,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:textStyle="bold"/>
-            <androidx.appcompat.widget.SearchView
+            <SearchView
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -274,42 +274,7 @@
                     android:textColor="@color/colorHitam"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"/>
-                <ImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/test"
-                    android:scaleType="fitXY"/>
-                <ImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/test"
-                    android:scaleType="fitXY"/>
-                <ImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/test"
-                    android:scaleType="fitXY"/>
-                <ImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/test"
-                    android:scaleType="fitXY"/>
-                <ImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/test"
-                    android:scaleType="fitXY"/>
-                <ImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:src="@drawable/test"
-                    android:scaleType="fitXY"/>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_aktivitas_new"
                     android:layout_width="match_parent"
