--- a/app/src/main/res/layout-large/fragment_home.xml
+++ b/app/src/main/res/layout-large/fragment_home.xml
@@ -34,7 +34,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:textStyle="bold"/>
-            <androidx.appcompat.widget.SearchView
+            <SearchView
                 android:id="@+id/sercing"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
