--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtEmail"
+
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/masuk"
-            android:backgroundTint="#FF3E71"
+            android:backgroundTint="#FF5151"
             tools:targetApi="lollipop" />
     </LinearLayout>
 </ScrollView>
