--- a/app/src/main/res/layout/point_items.xml
+++ b/app/src/main/res/layout/point_items.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="23dp"
         android:id="@+id/code_point"
         tools:text="@string/code"
+        android:textColor="#29293E"
         android:layout_marginLeft="35dp"
         android:textAlignment="center"
         android:textSize="12sp"
@@ -25,6 +26,7 @@
         android:layout_marginBottom="14dp"
         android:layout_marginTop="14dp"
         tools:text="@string/deskripsi"
+        android:textColor="#29293E"
         android:layout_marginLeft="41dp"
         android:textAlignment="textStart"
         android:textSize="12sp"
@@ -41,6 +43,7 @@
         android:layout_marginLeft="32dp"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:textColor="#29293E"
         app:fontFamily="@font/roboto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
