--- a/bukusakuonline/src/main/res/values/styles.xml
+++ b/bukusakuonline/src/main/res/values/styles.xml
@@ -14,6 +14,12 @@
         <item name="colorPrimaryDark">@color/colorBgSplash</item>
         <item name="colorAccent">@color/colorBgSplash</item>
     </style>
+    <style name="Login" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorBgSplash</item>
+        <item name="colorPrimaryDark">@color/colorBgSplash</item>
+        <item name="colorAccent">@color/colorBgSplash</item>
+    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
