--- a/app/src/main/res/layout/item_siswa.xml
+++ b/app/src/main/res/layout/item_siswa.xml
@@ -9,8 +9,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="125dp"
+        android:background="@drawable/border"
         android:layout_margin="15dp"
         app:cardCornerRadius="7dp"
+        app:cardElevation="0dp"
        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
